Use z-index to fix nav overflow issue
See my comment on #2676

--- a/src/themes/admin_default/assets/scss/fossbilling.scss
+++ b/src/themes/admin_default/assets/scss/fossbilling.scss
@@ -69,7 +69,7 @@ body {
         position: sticky;
         top: 0;
         overflow: visible;
-        z-index: 99;
+        z-index: 1001;
     }
 }
 
